--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,32 @@
 version: "3.4"
 services:
-  tdarr:
-    container_name: tdarr
-    image: ghcr.io/haveagitgat/tdarr:latest
-    restart: unless-stopped
-    network_mode: bridge
-    ports:
-      - 8265:8265 # webUI port
-      - 8266:8266 # server port
-      - 8267:8267 # Internal node port
-      - 8268:8268 # Example extra node port
-    environment:
-      - TZ=America/Chicago
-      - PUID=1000
-      - PGID=1000
-      - UMASK_SET=002
-      - serverIP=0.0.0.0
-      - serverPort=8266
-      - webUIPort=8265
-      - internalNode=true
-      - nodeID=MyInternalNode
-    volumes:
-      - /tmp/docker/tdarr/server:/app/server
-      - /tmp/docker/tdarr/configs:/app/configs
-      - /tmp/docker/tdarr/logs:/app/logs
-      - ./media:/media
-      - ./transcode_cache:/temp
+  # tdarr:
+  #   container_name: tdarr
+  #   image: ghcr.io/haveagitgat/tdarr:latest
+  #   restart: unless-stopped
+  #   network_mode: bridge
+  #   ports:
+  #     - 8265:8265 # webUI port
+  #     - 8266:8266 # server port
+  #     - 8267:8267 # Internal node port
+  #     - 8268:8268 # Example extra node port
+  #   environment:
+  #     - TZ=America/Chicago
+  #     - PUID=1000
+  #     - PGID=1000
+  #     - UMASK_SET=002
+  #     - serverIP=0.0.0.0
+  #     - serverPort=8266
+  #     - webUIPort=8265
+  #     - internalNode=true
+  #     - nodeID=MyInternalNode
+  #   volumes:
+  #     - /tmp/docker/tdarr/server:/app/server
+  #     - /tmp/docker/tdarr/configs:/app/configs
+  #     - /tmp/docker/tdarr/logs:/app/logs
+  #     - /mnt/jellyfin_media:/media
+  #     - /tmp:/media_two
+  #     - ./transcode_cache:/temp
 
 
 # node example
@@ -33,17 +34,24 @@ services:
     container_name: tdarr-node
     image: ghcr.io/haveagitgat/tdarr_node:latest
     restart: unless-stopped
-    network_mode: service:tdarr
+    # network_mode: service:tdarr
     environment:
       - TZ=America/Chicago
       - PUID=1000
       - PGID=1000
       - UMASK_SET=002
-      - nodeID=MainNode
-      - serverIP=0.0.0.0
+      - nodeID=RemoteNode
+      - serverIP=192.168.1.8
       - serverPort=8266
+      - NVIDIA_DRIVER_CAPABILITIES=all
+      - NVIDIA_VISIBLE_DEVICES=all
     volumes:
       - /tmp/docker/tdarr/configs:/app/configs
       - /tmp/docker/tdarr/logs:/app/logs
-      - ./media:/media
-      - ./transcode_cache:/temp
+      - /mnt/nas/media:/media
+      - /mnt/nas/transcode_cache:/temp
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
